# VocalCaculator

./: .gitignore  BUILDING.md  Cargo.toml  README.md  THIRD_PARTY.md
.agents/: phase1_bootstrap_checklist.md  project_execution_checklist.md  verify_vocal_calculator.ps1  vocal_calculator_asset_inventory.md  vocal_calculator_goal.md  vocal_calculator_goal_objective.txt  vocal_calculator_launch_prompts.md  vocal_calculator_local_environment.md  vocal_calculator_research_sync.md  vocal_calculator_subagent_protocol.md
.agents/sync/: README.md
.local/: activate.cmd  activate.ps1  bootstrap.ps1  find-msvc-devcmd.ps1  start-emulator.ps1  status.ps1
src/: error.rs  lib.rs  main.rs  traits.rs
src/app/: bridge.rs  callbacks.rs  config.rs  mod.rs  platform.rs
src/audio/: broken.rs  convert.rs  mod.rs  music.rs  normal.rs  registry.rs
src/core/: action.rs  calculator.rs  format.rs  mod.rs  speech.rs  token.rs
src/net/: android.rs  discovery.rs  handle.rs  handshake.rs  mod.rs  protocol.rs  router.rs  runtime.rs  session.rs  state.rs  tests.rs  transport.rs
src/net/discovery/: broadcast.rs  mod.rs  multicast.rs  peer_table.rs
tests/: discovery_multicast.rs  test_udp_transport.rs
ui/: main.slint  theme.slint
ui/components/: about-dialog.slint  button.slint  display.slint  network-panel.slint  settings-panel.slint  status-bar.slint  status-icon-btn.slint
